[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/spawners/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnCenters" type="Node2D" parent="."]

[node name="Spawns" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
